# PercCmd

./: .gitignore  CMakeLists.txt  README.md  xcXMX.cmake
releases/ssp/: PercCmd
releases/xmx/: PercCmd
resources/: S90perccmd  perccmd.json  perccmd.sh.ssp
scripts/: release.ssp  release.ssp.sh  release.xmx  release.xmx.sh
src/: PercCmd.cpp
